--- a/src/index.css
+++ b/src/index.css
@@ -46,17 +46,19 @@ form{
 z-index: -1;
 position:absolute;
 margin: auto;
-width: 100vw
+width: 100vw;
 }
 
 .video-text{
   font-family: 'Open Sans', sans-serif;
   position: absolute;
-  font-size: 6vw;
+  font-size: 4vw;
   color: white;
   text-align: center;
-  margin-left: 30vw;
-  margin-top: 30vw;
+  margin-left: 0vw;
+  margin-top: 35vw;
+  width: 100vw;
+
 }
 
 input{
